--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ref",
+  "name": "notext",
   "version": "0.0.1",
   "description": "A JavaScript library that allows to insert a reference instead of a log text.",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zkochan/ref.git"
+    "url": "git+https://github.com/zkochan/notext.git"
   },
   "keywords": [
     "logging"
@@ -20,7 +20,7 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/zkochan/ref/issues"
+    "url": "https://github.com/zkochan/notext/issues"
   },
-  "homepage": "https://github.com/zkochan/ref#readme"
+  "homepage": "https://github.com/zkochan/notext#readme"
 }
